<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tomasino Ka Ba?</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_instructions">Instructions</string>
    <string name="title_activity_high_scores">HighScores</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_new_game">NewGame</string>
    <string name="instructions_text">- This is a 8-item (TEMPORARY) quiz which gauges how much of a Thomasian are you.</string>
    <string name="instructions_text2">- Tap / Click the answer of your choice from among the given choices.</string>
    <string name="instructions_text3">- Going back to the past question is not allowed.</string>
    <string name="hs_text1"> SAMPLE USER 1 </string>
    <string name="hs_text2"> SAMPLE USER 2 </string>
    <string name="hs_text3"> SAMPLE USER 3 </string>
    <string name="hs_text4"> SAMPLE USER 4 </string>
    <string name="hs_text5"> SAMPLE USER 5 </string>
    <string name="hs_text6"> SAMPLE USER 6 </string>
    <string name="hs_text7"> SAMPLE USER 7 </string>
    <string name="hs_text8"> SAMPLE USER 8 </string>
    <string name="about_text1">THIS APP HAS BEEN DEVELOPED BY PAMELA SORIANO OF 3IT-A FOR THE PRELIMS PERIOD OF SEM 1. </string>
    <string name="about_text2">COMPATIBLE WITH ANDROID GINGERBREAD AND ABOVE. </string>
    <string name="about_text3">ALL RIGHTS RESERVED 2014.</string>
    <string name="title_activity_game2">Game2</string>
    <string name="title_activity_game3">Game3</string>
    <string name="title_activity_game4">Game4</string>
    <string name="title_activity_game5">Game5</string>
    <string name="title_activity_score">Score</string>
    <string name="title_activity_game6">Game6</string>
    <string name="title_activity_game7">Game7</string>
    <string name="title_activity_game8">Game8</string>

</resources>
